# opentryrw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: container.yml  frontend-release.yml
caddy/: Caddyfile
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: TelegramButton.tsx
frontend/src/shell/: AppShell.tsx
frontend/src/views/: ConsolePage.tsx  LandingPage.tsx
migrations/: env.py
migrations/versions/: 0001_initial_postgres_schema.py  0002_rate_limits.py  0003_health_started_at.py
opentryrw/: __init__.py  api.py  audit.py  auth.py  auth_async.py  database.py  db.py  deployments.py  deployments_async.py  models.py  notifications.py  notifications_async.py  orm.py  readiness.py  resources.py  security.py  settings.py  worker.py
opentryrw/dns_providers/: __init__.py  base.py  cloudflare.py  fallback.py
opentryrw/providers/: __init__.py  base.py  digitalocean.py  mock.py
