[project]
name = "opentryrw"
version = "0.1.0"
description = "Open source launcher for temporary Remnawave demo instances."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "httpx2>=0.27.0",
  "pyjwt[crypto]>=2.10.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "tinydb>=4.8.2",
  "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
